# mahjong

./: .gitignore  README.md  pyproject.toml
mahjong/: faces.py  main.py  parameters.py  positioner.py  rules.py  screen.py  tiles.py
tests/: test_tiles.py  tests_initials.py
